--- a/chap_version.qmd
+++ b/chap_version.qmd
@@ -46,4 +46,13 @@ source(here::here("_extensions", "bit2r", "bitPublish", "init_environments.R"))
     - 멀티 아웃 포맷
         - titlebox_block() 함수
 
+### version 0.2.2
+
+- **2023-06-07**
+
+- 유니코드 인덱스를 처리하는 방법 개선
+    - 초성을 기준으로 찾아보기 정상적으로 동작 
+    - Not Yet
+- Table 크로스-레퍼런스의 구현 (#31)
+- HTML의 일부 크로스-레퍼런스 미적용 문제 및 Latex 패키지 로드 명령이 출력되는 문제 해결 (#29, thanks to youngjinkim81)
 
