--- a/chap_exams.qmd
+++ b/chap_exams.qmd
@@ -1,7 +1,6 @@
-# 예제를 위한 장
+# 예제를 위한 장 {#sec-data}
 
 ```{=tex}
-\label{chap:data} 
 \newcounter{exam_num_data}
 \setcounter{exam_num_data}{0}
 ```
@@ -13,8 +12,11 @@ source(here::here("_extensions", "bit2r", "bitPublish", "init_environments.R"))
 
 이 장에서는 `bitPublish'를 이용하여 작성한 한글 책'의 형태를 이해할 수 있도록, 여러 조판 방법의 예시를 표현한다. 본문에 표현되는 내용은 저술중인, 가칭 "R로 배우는 기초 통계학"의 일부를 발췌한 것이다.[@rstat] 그러므로 본문의 내용은 완벽한 문맥이 아닌, 중간중간 문단이나 내용이 제거된 불완전한 내용임을 밝혀 둔다.
 
-```{=tex}
-\titlebox{학습 목표}{Cbluejeans}{데이터의 분류 체계로서의 척도를 이해하고, 이를 기반으로 한 R 데이터 객체를 이해한다. CSV 파일을 읽고, 데이터 프레임 객체로 CSV 파일을 생성할 수 있다.}
+```{r}
+#| echo: false
+#| results: asis
+titlebox_block("데이터의 분류 체계로서의 척도를 이해하고, 이를 기반으로 한 R 데이터 객체를 이해한다. CSV 파일을 읽고, 데이터 프레임 객체로 CSV 파일을 생성할 수 있다.",
+               title = "학습 목표", theme = "bluejeans")
 ```
 
 ## 데이터
@@ -111,8 +113,8 @@ par(op)
 
 ```{=tex}
 \addtocounter{exam_num_data}{1}
-\begin{example}{\ref{chap:data}.\arabic{exam_num_data}}
-\examplelabel{scale4}{\ref{chap:data}.\arabic{exam_num_data}}
+\begin{example}{\ref{sec-data}.\arabic{exam_num_data}}
+\examplelabel{scale4}{\ref{sec-data}.\arabic{exam_num_data}}
 네 가지의 척도를 R의 데이터 객체로 표현해 보자.  
 \end{example}
 ```
