--- a/chap_exams.qmd
+++ b/chap_exams.qmd
@@ -1,10 +1,5 @@
 # 예제를 위한 장 {#sec-data}
 
-```{=tex}
-\newcounter{exam_num_data}
-\setcounter{exam_num_data}{0}
-```
-
 ```{r init, include=FALSE}
 #source(here::here("_extensions", "bitPublish", "init_environments.R"))
 source(here::here("_extensions", "bit2r", "bitPublish", "init_environments.R"))
@@ -111,13 +106,12 @@ par(op)
 \end{shadequote}
 ```
 
-```{=tex}
-\addtocounter{exam_num_data}{1}
-\begin{example}{\ref{sec-data}.\arabic{exam_num_data}}
-\examplelabel{scale4}{\ref{sec-data}.\arabic{exam_num_data}}
-네 가지의 척도를 R의 데이터 객체로 표현해 보자.  
-\end{example}
-```
+
+::: {#exr-scale}
+### 척도의 표현
+네 가지의 척도를 R의 데이터 객체로 표현해 보자.
+:::
+
 
 명목척도에 대한 예제다. 예제의 fruits는 세 가지 과일 이름을 갖는 범주형 데이터로 R의 `factor()`\index{factor()} 함수로 만들 수 있다. 이 함수는 `factor`\index{factor}라는, 명목척도를 표현하는 데이터 객체를 생성한다. 데이터 객체인 `factor`는 `table()`\index{table()} 함수를 이용해서 도수와 비율을 구할 수 있다.  
 명목척도를 표현하는 `factor` 객체는 apple, banana, pear와 같이 과일 이름으로 표현되지만 R의 내부에서는 1, 2, 3과 같이 인식된다. 그래서 `as.numeric()`\index{as.numeric()} 함수를 이용하면 apple, pear, pear, apple, banana가 1, 3, 3, 1, 2와 같이 인식됨을 알 수 있다. 여기서 각 수준을 인식하는 1, 2, 3은 비록 수치형이지만 각 수준의 크기가 아니라 몇 번째 수준인가를 나타내는 지시자다.
