--- a/chap_version.qmd
+++ b/chap_version.qmd
@@ -1,10 +1,5 @@
 # Version {#sec-version}
 
-```{=tex}
-\newcounter{exam_num_version} 
-\setcounter{exam_num_version}{0}
-```
-
 ```{r init, include=FALSE}
 # source(here::here("_extensions", "bitPublish", "init_environments.R"))
 source(here::here("_extensions", "bit2r", "bitPublish", "init_environments.R"))
@@ -51,12 +46,17 @@ source(here::here("_extensions", "bit2r", "bitPublish", "init_environments.R"))
 
 - **2023-06-07**
 
+- Table 크로스-레퍼런스의 구현 (#31)
+- HTML의 일부 크로스-레퍼런스 미적용 문제 및 Latex 패키지 로드 명령이 출력되는 문제 해결 (#29, thanks to youngjinkim81)
+- chapter label을 LaTeX 형식 대신, 멀티 아웃 포맷을 위해서 마크다운 형식으로 변경 
+
+
+### version 0.2.3
+
+- **2023-06-11**
+
 - 유니코드 인덱스를 처리하는 방법 개선
     - 초성을 기준으로 찾아보기 정상적으로 동작 
     - Not Yet
-- Table 크로스-레퍼런스의 구현 (#31)
-- HTML의 일부 크로스-레퍼런스 미적용 문제 및 Latex 패키지 로드 명령이 출력되는 문제 해결 (#29, thanks to youngjinkim81)
-- HTML의 일부 크로스-레퍼런스 미적용 문제 및 Latex 패키지 로드 명령이 출력되는 문제 해결 (#29, thanks to youngjinkim81)
-- chapter label을 LaTeX의 형식 대신, 멀티 아웃 포맷을 위해서 마크다운 형식으로 변경 
-
+- 예제 블록의 멀티 아웃 포맷 지원 (#36)
 
