이미지 삽입 예제 추가

--- a/chap_intro_bitpublish.qmd
+++ b/chap_intro_bitpublish.qmd
@@ -874,18 +874,58 @@ knitr::include_graphics("이미지 파일이름.png")
 이미지의 페이지 배치는 다음과 같은 `fig-pos`[@float] 옵션으로 지정합니다.
 
 | 플로트 지정자 | 의미                                                                                                               |
-|:-------------:|--------------------------------------------------------|
+|:-------------:|--------------------------------------------------------------------------------------------------------------------|
 | h             | here의 약자로, 본문에 위치한 그 자리에 이미지 배치                                                                 |
-| t             | top의 약자로, 이미지가 위치한 페이지의 가장 윗부분에 배치. 크기가 맞지 않으면 다음 페이지의 가장 윗쪽에 배치         |
+| t             | top의 약자로, 이미지가 위치한 페이지의 가장 윗부분에 배치. 크기가 맞지 않으면 다음 페이지의 가장 윗쪽에 배치       |
 | b             | bottom의 약자로, 이미지가 위치한 페이지 가장 아래에 이미지 배치. 크기가 맞지 않으면 다음 페이지의 가장 아래에 배치 |
 | p             | 이미지가 텍스트 없는 단독 페이지를 따로 만들어 배치                                                                |
-| !             | 적절한 위치 결정을 위해, 적용한 지정자 재정의. 지정자가 나열된 순서에 따라 적절한 위치에 이미지 삽입                                                              |
+| !             | 적절한 위치 결정을 위해, 적용한 지정자 재정의. 지정자가 나열된 순서에 따라 적절한 위치에 이미지 삽입               |
 
 플로트 지정자 예제에서 사용한 "htb!"는 일단 이미지를 정확히 그 위치(h)에 배치하려 하고, 여의치 않으면 다음은 위(t)이기 때문에 그 다음 페이지 가장 윗부분에 배치합니다. 만약 그것도 여의치 않으면 그 다음은 아래(b)이기 때문에 그 다음 페이지 가장 아랫 부분에 배치합니다. 
 
 그런데 bitPublish에서 `fig-pos`의 기본값[^default]이 "htb!"로 설정되었기 때문에 이 설정을 생략해도 적당한 페이지에 이미지를 배치합니다. `fig-align`의 기본값도  "center"입니다.
 
 [^default]: "htb!"을 기본값으로 설정하기 위해서는, 뒷부분에서 설명할 플롯에서의 한글 폰트 적용을 위한 init_environments.R 파일을 로드하는 설정을 전제로 합니다.
+
+실제로 `Allison Horst`가 그린 `R learners` 일러스트를 본문에 삽입하고 참조해봅니다.
+
+https://allisonhorst.com/everything-else 페이지에서 다운로드한 다음 예제의 이미지 파일을 다음처럼 본문에 삽입합니다. 실제 홈페이지의 파일 이름은 그 의미를 파악할 수 없을 정도로 매우 긴, 암호같은 이름이었지만 편의를 위해서 `rlearners.png`로 변경했습니다.
+
+````md
+```{r}`r ''`
+#| label: fig-rlearners
+#| echo: false
+#| out-width: "90%"
+#| fig-align: "center"
+#| fig-cap: "R learners, Allison Horst."
+#| fig-pos: "htb!"
+
+knitr::include_graphics("img/rlearners.png")
+```
+````
+
+그리고 이미지를 크로스-레퍼런스하기 위해서는 다음과 같이 사용합니다. 
+
+```{verbatim}
+Allison Horsts는 [@fig-rlearners]\과 같은 일러스트를 그렸습니다.
+```
+
+```{r}
+#| label: fig-rlearners
+#| echo: false
+#| out-width: "90%"
+#| fig-align: "center"
+#| fig-cap: "R learners, Allison Horst."
+#| fig-pos: "htb!"
+
+knitr::include_graphics("img/rlearners.png")
+```
+
+이 이미지 크로스 크로스-레퍼런스는 다음과 같이 표현됩니다.  
+
+Allison Horsts는 [@fig-rlearners]\과 같은 일러스트를 그렸습니다.
+
+주의할 점은 HTML의 경우에는 뒤에서 다룰 자동 조사 처리를 지원하지 않기 때문에 \\과가 와나 과로 자동 변환되지 않습니다. 참고로 자동 조사 처리는 뒤에서 자세히 다룹니다.
 
 ::: {.infobox .information data-latex="{information}{}"}
 **fig-pos과 label**
@@ -897,7 +937,7 @@ knitr::include_graphics("이미지 파일이름.png")
 그래서 'fig-pos'의 값을 "htb!"으로 설정하고 'label'을 지정하여 크로스-레퍼런스를 이용해서, "그림 2.1처럼"과 같이 표현하는 것이 좋습니다. 
 :::
 
-
+ 
 #### R 그래픽스
 
 R 스크립트로 그리는 R 그래픽스는 `knitr` `청크`(`chunk`)를 이용해서, R 스크립트를 실행하여 삽입합니다.
