HTML 아웃 포맷의 R 그래픽스 비정상 출력 문제 해결  (#30)

--- a/chap_intro_bitpublish.qmd
+++ b/chap_intro_bitpublish.qmd
@@ -940,12 +940,13 @@ Allison Horsts는 [@fig-rlearners]\과 같은 일러스트를 그렸습니다.
  
 #### R 그래픽스
 
-R 스크립트로 그리는 R 그래픽스는 `knitr` `청크`(`chunk`)를 이용해서, R 스크립트를 실행하여 삽입합니다.
+R 마크다운에 익숙한 R 사용자라면 다음처럼 `knitr` `청크`(`chunk`)를 이용하여 R 스크립트 실행으로 본문에 플롯 삽입을 수행할 수 있습니다. 다음 스크립트는 [@fig-hist]\과 같은 R 그래픽스 플롯을 출력합니다.
 
 ````md
 ```{r}`r ''`
 #| label: fig-hist
 #| echo: false
+#| message: false
 #| fig-width: 6
 #| fig-height: 4
 #| out-width: "70%"
@@ -955,24 +956,24 @@ hist(rnorm(500), col = "lightblue", main = "정규분포의 히스토그램")
 ```
 ````
 
-
-그런데 R 플롯에 한글이 포함될 경우에 [@fig-hist]처럼 한글이 출력되지 않는 문제가 발생합니다.
-
 ```{r}
 #| label: fig-hist
-#| message: false
-#| warning: false
 #| echo: false
+#| message: false
 #| fig-width: 6
 #| fig-height: 4
 #| out-width: "70%"
 #| fig-cap: "정규분포 히스토그램"
 set.seed(123)
-
 hist(rnorm(500), col = "lightblue", main = "정규분포의 히스토그램")
 ```
 
-한글을 정상적으로 출력하기 위해서는 문서의 맨 앞에 다음 스크립트를 추가합니다. 
+도서에서 플롯의 크기는 인쇄되는 너비의 70% 정도도 출력되는 것이 적절합니다. 그래서 청크 옵션에 `out-width`를 사용하였습니다. 이 방법은 멀티 아웃 포맷을 지원하며 4\times6 배판 `판형`\index{판형}의 레이아웃에 최적화된 설정입니만, 랜더링된 결과를 보고 저작자의 의도대로 수정하시기 바랍니다.
+
+
+bitPublish는 `ragg` 패키지의 `agg_png()`를 사용하여 본문에 플롯을 시각화합니다. 이 방법은 한글 문자가 포함된 스크립트도 기본 한글 폰트로 문제없이 시각화합니다. 그런데 까다로운 저작자는 플롯의 기본 폰트가 마음에 들지 않을 수 있습니다. 개인적으로는 R 시각화의 한글 폰트로 `나눔스퀘어` 폰트를 즐겨 사용합니다. 그래서 bitPublish에 `나눔스퀘어` 폰트로 시각화하는 기능을 구현했습니다.
+
+만약 기본 폰트가 아닌 `나눔스퀘어` 폰트를 사용하려면 문서의 맨 앞에 다음 스크립트를 추가합니다. 
 
 ````md
 ```{r init, include=FALSE}`r ''`
@@ -980,19 +981,19 @@ source(here::here("_extensions", "bit2r", "bitPublish", "init_environments.R"))
 ```
 ````
 
-그런 후, R 플롯을 그리는 `knitr`\index{knitr} 청크에 `nanum` 옵션의 값을 true로 추가합니다. 이 설정은 `나눔스퀘어` 폰트를 사용해서 R 플롯을 시각화한다는 것을 의미합니다. 다음 스크립트는 [@fig-hist2]\과 같은 R 그래픽스 플롯을 출력합니다.
+그런 후, R 플롯을 그리는 `knitr`\index{knitr} 청크에 `nanum` 옵션을 추가하고 값을 true로 지정합니다. 이 설정은 `나눔스퀘어` 폰트를 사용해서 R 플롯을 시각화한다는 것을 의미합니다. 다음 스크립트는 [@fig-hist2]\과 같은 R 그래픽스 플롯을 출력합니다.
 
 ````md
 ```{r}`r ''`
-#| label: fig-hist2
+#| label: fig-hist
 #| echo: false
+#| message: false
 #| fig-width: 6
 #| fig-height: 4
 #| out-width: "70%"
-#| fig-cap: "정규분포 히스토그램"
+#| fig-cap: "나눔스퀘어 폰트를 사용한 시각화"
 #| nanum: true
 set.seed(123)
-
 hist(rnorm(500), col = "lightblue", main = "정규분포의 히스토그램")
 ```
 ````
@@ -1000,14 +1001,14 @@ hist(rnorm(500), col = "lightblue", main = "정규분포의 히스토그램")
 ```{r}
 #| label: fig-hist2
 #| echo: false
+#| message: false
 #| fig-width: 6
 #| fig-height: 4
 #| out-width: "70%"
-#| fig-cap: "정규분포 히스토그램"
+#| fig-cap: "나눔스퀘어 폰트를 사용한 시각화"
 #| nanum: true
 set.seed(123)
-
-hist(rnorm(500), col = 'lightblue', main = '정규분포의 히스토그램')
+hist(rnorm(500), col = "lightblue", main = "정규분포의 히스토그램")
 ```
 
 만약 한글이 포함되지 않은 플롯에서 라틴 문자에 사용할 폰트로 `Nimbus Sans L` 폰트를 사용하려면, `nimbus` 옵션의 값을 true로 추가하면 됩니다.
@@ -1022,6 +1023,7 @@ ggplot2 그래픽스도 별도의 설정없이 한글을 출력합니다. 테마
 ```{r}`r ''`
 #| label: fig-hist3
 #| echo: false
+#| message: false
 #| fig-width: 6
 #| fig-height: 4
 #| out-width: "70%"
