참고문헌 설명 수정

--- a/references.bib
+++ b/references.bib
@@ -5,10 +5,11 @@
   publisher = {자유아카데미}
 }
 
-@misc{quarto,
+@misc{posit2023quarto,
   author = {posit},
   title = {Welcome to Quarto},
   howpublished = {\url{https://quarto.org/}},
+  year = {2023},
   note = {Accessed: 2023-05-15}
 }
 
@@ -16,24 +17,27 @@
   author = {posit},
   title = {Creating Extensions},
   howpublished = {\url{https://quarto.org/docs/extensions/creating.html}},
+  year = {2023},  
   note = {Accessed: 2023-05-15}
 }
 
-@misc{quartoarch,
+@misc{horst2022quartoarch,
   author = {Allison Horst},
   title = {ÇETINKAYA-RUNDEL \& LOWNDES QUARTO KEYNOTE},
   howpublished = {\url{https://allisonhorst.com/cetinkaya-rundel-lowndes-quarto-keynote}},
+  year = {2022},  
   note = {Accessed: 2023-05-17}
 }
 
-@misc{float,
+@misc{minidonut2021float,
   author = {미니도넛},
   title = {이미지 특정 위치에 고정하기},
+  year = {2021},    
   howpublished = {\url{https://forestunit.tistory.com/117}},
   note = {Accessed: 2023-05-20}
 }
 
-@misc{rmcook,
+@misc{xie2022rmcook,
   author = {Yihui Xie, Christophe Dervieux, Emily Riederer},
   title = {R Markdown Cookbook},
   year = {2022},  
@@ -41,28 +45,23 @@
   note = {Accessed: 2023-05-29}
 }
 
-@misc{layout,
+@misc{math2012layout,
   author = {Math 600},
   title = {Placing and Spacing},
   howpublished = {\url{http://cemc1.uwaterloo.ca/~math600/wp/wp-content/uploads/2012/09/layout.png}},
+  year = {2012},    
   note = {Accessed: 2023-05-16}
 }
 
-@misc{geometry,
+@misc{jonas2015geometry,
   author = {Jonas Devlieghere},
   title = {Packages I Wish I Knew When Starting LaTeX},
   howpublished = {\url{https://jonasdevlieghere.com/content/images/2015/06/geometry.png}},
+  year = {2015},   
   note = {Accessed: 2023-05-16}
 }
 
-@misc{geometry-1,
-  author = {Math 600},
-  title = {CTEX - 在线文档 - TeX/LaTeX 常用宏包},
-  howpublished = {\url{https://ctex.org/documents/packages/images/geometry-1.gif}},
-  note = {Accessed: 2023-05-16}
-}
-
-@article{kim2007,
+@article{kim2007latex,
   author = {김강수},
   title = {한글 라텍에서 조사 이형태 교체의 자동화에 관하여},
   year = {2007},
@@ -77,7 +76,7 @@
   numpages = {14}
 }
 
-@article{knuth84,
+@article{knuth1984knuth,
   author = {Knuth, Donald E.},
   title = {Literate Programming},
   year = {1984},
