--- a/references.bib
+++ b/references.bib
@@ -13,7 +13,7 @@
   note = {Accessed: 2023-05-15}
 }
 
-@misc{extensions,
+@misc{posit2023extensions,
   author = {posit},
   title = {Creating Extensions},
   howpublished = {\url{https://quarto.org/docs/extensions/creating.html}},
