add version 0.2.7 info

--- a/chap_version.qmd
+++ b/chap_version.qmd
@@ -85,3 +85,12 @@ source(here::here("_extensions", "bit2r", "bitPublish", "init_environments.R"))
     - HTML 아웃 포맷에서 내용이 없는 참고문헌 chapter 출력문제 해결
 - Github 파일 다운로드로 설치 시의 파일경로 문제 해결 방법 제시  (#45)
     - 예제 문서의 **Troubleshooting** chapter에 기술
+    
+
+### version 0.2.7
+
+- **2023-07-07**
+
+- table_with_caption() 오류 수정 (#49)
+    - PDF 아웃 포맷에서 테이블의 헤더(변수 이름)가 `iris` 변수 이름으로 출력되는 문제
+    
