--- a/references.bib
+++ b/references.bib
@@ -1,5 +1,5 @@
 @book{ryu2013rstat,
-  author = {유충현, 이상호},
+  author = {유충현 and 이상호},
   title = {R을 이용한 통계학 이해},
   year = {2013},
   publisher = {자유아카데미}
