--- a/_extensions/bitPublish/bitPublish.tex
+++ b/_extensions/bitPublish/bitPublish.tex
@@ -333,6 +333,7 @@
 \renewcounter{Exercise}[chapter]
 \newcommand{\QuestionNB}{\bfseries\arabic{Question}.\ }
 \renewcommand{\ExerciseName}{\sffamily연습문제}
+\renewcommand{\ExerciseHeaderNB}{\thechapter 장. }
 \renewcommand{\ExerciseHeader}{\noindent\def\stackalignment{l}% code from https://tex.stackexchange.com/a/195118/101651
     \stackunder[0pt]{\colorbox{cornflowerblue}{\textcolor{white}{\textbf{\sffamily\LARGE\ExerciseHeaderNB\;\large\ExerciseName}}}}{\textcolor{cornflowerblue}{\rule{\linewidth}{2pt}}}\medskip}
 \renewcommand{\AnswerName}{연습문제 풀이}
