--- a/chap_intro_bitpublish.qmd
+++ b/chap_intro_bitpublish.qmd
@@ -1675,3 +1675,36 @@ LaTeX이 크로스-레퍼런스에서 계산되는 아라비아 숫자의 한글
 
 그림 2.3\과 그림 2.4\는 같이 정규분포를 따르는 히스토그램을 그린다.
 
+
+### 커버 이미지 추가
+
+HTML 아웃 포맷에서 커머 이미지를 추가할 수 있습니다.
+
+다음처럼 `_quarto.yml` 파일의 YAML에서 `book` 아래 `cover-image`에 커버 이미지의 경로를 지정하면 됩니다.
+
+```{verbatim}
+book:
+  title: "bitPublish를 이용하여 한글 책 조판하기"
+  chapters:
+    - index.qmd
+    - chap_exams.qmd
+    - chap_intro_bitpublish.qmd
+    - chap_troubleshooting.qmd
+    - chap_version.qmd
+    - chap_solve_exercise.qmd    
+  cover-image: hexlogo/bitPublish_logo.png    
+```
+
+이 설정으로 [@fig-coverimage]처럼 커버 이미지가 출력되는 HTML 아웃 포맷 첫 화면에 커버 이미지가 출력됩니다.
+
+```{r}
+#| label: fig-coverimage
+#| echo: false
+#| out-width: "90%"
+#| fig-align: "center"
+#| fig-cap: "커버 이미지가 추가된 HTML 포맷 아웃의 화면"
+#| fig-pos: "htb!"
+
+knitr::include_graphics("img/cover-image.png")
+```
+
