--- a/chap_version.qmd
+++ b/chap_version.qmd
@@ -106,4 +106,11 @@ source(here::here("_extensions", "bit2r", "bitPublish", "init_environments.R"))
             - 기본 이름은 **"연습문제"**이지만, "Exercise" 등으로 변경 가능
     - 예제 본문에 연습문제 및 연습문제 해답 사용방법 추가
 
+
+### version 0.2.9
+
+- **2023-08-06**
+
+- HTML 아웃 포맷에서의 cover-image 사용 예제 추가 (#54)
+    
     
