--- a/chap_intro_bitpublish.qmd
+++ b/chap_intro_bitpublish.qmd
@@ -1466,7 +1466,8 @@ LaTeX을 이용한 표를 삽입하는 방법은 LaTeX 스크립트를 기술하
 
 
 ```{=tex}
-\begin{table}[htb!]
+#| tbl-pos: htb!
+\begin{table}
 \centering
 \begin{tabular}[]{llcr}
 \toprule
@@ -1495,18 +1496,19 @@ table_with_caption(tab, label, digits = NULL, big.mark = NULL)
 ```
 
 이 함수를 사용할 때 주의할 점은 멀티 아웃 포맷을 지원하기 위해서는 다음처럼 knir 청크에 
-label로 크로스-레퍼런스를 위한 라벨을 정의하고, tbl-cap로 캡션을 정의해야 합니다. 또한 중복되지만, table_with_caption() 함수에도 label 인수로 라벨을 지정해야 합니다.
+label로 크로스-레퍼런스를 위한 라벨을 정의하고, tbl-cap로 캡션을 정의해야 합니다. 또한 중복되지만, table_with_caption() 함수에도 label 인수로 라벨을 지정하고 caption 인수로 캡션을 지정해야 합니다.
 
 다음은 [@tbl-iris]\를 생성합니다.  
 
 ````md
 ```{r}`r ''`
 #| label: tbl-iris
-#| tbl-cap: "Sample Iris Data"
+#| tbl-cap: "Iris Data"
 #| echo: false
 #| results: asis
 
-table_with_caption(head(iris), label = "tbl-iris", digits = 2)
+table_with_caption(head(iris), label = "tbl-iris", 
+                   caption = "Iris Data", digits = 2)
 ```
 ````
 
@@ -1516,7 +1518,8 @@ table_with_caption(head(iris), label = "tbl-iris", digits = 2)
 #| echo: false
 #| results: asis
 
-table_with_caption(head(iris), label = "tbl-iris", digits = 2)
+table_with_caption(head(iris), label = "tbl-iris", 
+                   caption = "Iris Data", digits = 2)
 ```
 
 ### 크로스-레퍼런스
