--- a/chap_tips.qmd
+++ b/chap_tips.qmd
@@ -30,7 +30,47 @@ source(here::here("_extensions", "bit2r", "bitPublish", "init_environments.R"))
 
 ::: {#tbl-image}
 
-![](img/table_image.png){fig-pos='!ht' fig-align="center" width=50%}
+![](img/table_image.png){fig-pos='!ht' fig-align='center' width=50%}
 
 테이블 이미지의 표로 출력
 :::
+
+### 문서 내 인용 하이퍼 링크 제거
+
+문서 내 인용을 하이퍼 링크로 제공하는 것이 기본 설정이지만, 이를 제거하고 싶을 때가 있습니다. 
+
+예를 들어서 생성된 문서를 인쇄할 경우에 하이퍼 링크가 파란색으로 출력되는 것을 방지하고 싶을 때가 있습니다. pdf 파일로 배포할 경우에는 하이퍼 링크가 필요하지만, 단행본 출판을 위해서 인쇄 목적의 출력을 위해서는 하이퍼 링크를 제거하는 것이 좋습니다. 
+
+이때 다음과 같이 설정을 변경할 수 있습니다.
+
+_quarto.yml 파일에 다음과 같은 `hyperrefoptions` 설정을 추가합니다.
+
+```{md}
+hyperrefoptions: draft
+```
+
+다음은 bitPublist로 생성된 문서의 인용을 하이퍼 링크로 제공하는 것을 방지하는 _quarto.yml 파일 예제입니다. 만약 하이퍼 링크를 제공하고 싶다면 `hyperrefoptions: draft`를 제거하면 됩니다.
+
+```{md}
+project:
+  type: book
+  output-dir: docs
+
+lang: ko-KR
+
+book:
+  title: "bitPublish를 이용하여 한글 책 조판하기"
+  chapters:
+    - index.qmd
+    - chap_exams.qmd
+    - chap_intro_bitpublish.qmd
+    - chap_tips.qmd    
+    - chap_troubleshooting.qmd
+    - chap_version.qmd
+    - chap_solve_exercise.qmd    
+  cover-image: hexlogo/bitPublish_logo.png    
+bibliography: references.bib
+link-citations: false
+hyperrefoptions: draft
+```
+
