change some text

--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,13 @@
+@article{mora2020evolution,
+	author = {Mora-Cantallops, Mar{\c{c}}al and Sicilia, Miguel-{\'A}ngel and Garc{\'\i}a-Barriocanal, Elena and S{\'a}nchez-Alonso, Salvador},
+	journal = {Journal of Software: Evolution and Process},
+	number = {11},
+	pages = {e2270},
+	publisher = {Wiley Online Library},
+	title = {Evolution and prospects of the Comprehensive R Archive Network (CRAN) package ecosystem},
+	volume = {32},
+	year = {2020}}
+	
 @book{ryu2013rstat,
   author = {유충현 and 이상호},
   title = {R을 이용한 통계학 이해},
